examples/multi-tls/ingress-multi-tls.yaml
apiVersion: networking/v1
kind: Ingress
metadata:
  name: app
spec:
  tls:
  - hosts:
    - foo.bar
    secretName: foobar-ssl
  - hosts:
    - bar.foo
    secretName: barfoo-ssl
  rules:
  - host: foo.bar
    http:
      paths:
      - path: /
        backend:
          serviceName: back-svc1
          servicePort: 8080
  - host: bar.foo
    http:
      paths:
      - path: /
        backend:
          serviceName: back-svc2
          servicePort: 8080
